; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_NCR5380.c_NCR5380_set_timer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_NCR5380.c_NCR5380_set_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.NCR5380_hostdata = type { i32, i64 }

@jiffies = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.NCR5380_hostdata*, i64)* @NCR5380_set_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @NCR5380_set_timer(%struct.NCR5380_hostdata* %0, i64 %1) #0 {
  %3 = alloca %struct.NCR5380_hostdata*, align 8
  %4 = alloca i64, align 8
  store %struct.NCR5380_hostdata* %0, %struct.NCR5380_hostdata** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* @jiffies, align 8
  %6 = load i64, i64* %4, align 8
  %7 = add i64 %5, %6
  %8 = load %struct.NCR5380_hostdata*, %struct.NCR5380_hostdata** %3, align 8
  %9 = getelementptr inbounds %struct.NCR5380_hostdata, %struct.NCR5380_hostdata* %8, i32 0, i32 1
  store i64 %7, i64* %9, align 8
  %10 = load %struct.NCR5380_hostdata*, %struct.NCR5380_hostdata** %3, align 8
  %11 = getelementptr inbounds %struct.NCR5380_hostdata, %struct.NCR5380_hostdata* %10, i32 0, i32 0
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @schedule_delayed_work(i32* %11, i64 %12)
  ret void
}

declare dso_local i32 @schedule_delayed_work(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
